--- a/tox.ini
+++ b/tox.ini
@@ -40,3 +40,8 @@ commands =
     flake8 src setup.py
     mypy src setup.py
     pylint src setup.py
+
+[gh-actions]
+python =
+    3.7: py37, static, docs
+    3.8: py38
