--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ deps =
     pydocstyle ~= 4.0.1
     flake8-docstrings ~= 1.5.0
     pep8-naming ~= 0.8.2
-    mypy ~= 0.730
+    mypy >= 0.760, < 0.770
     pylint ~= 2.4.2
 commands =
     bandit --recursive -ll src setup.py
