Add black to static checks

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ commands =
 [testenv:static]
 basepython = python3.7
 deps =
+    black ~= 21.6b
     bandit ~= 1.7.0
     flake8 ~= 3.9.0
     flake8-bugbear ~= 21.4.0
@@ -37,10 +38,15 @@ deps =
     mypy >= 0.760, < 0.770
     pylint ~= 2.8.3
 commands =
+    black --check src setup.py tests docs
     bandit --recursive -ll src setup.py
     flake8 src setup.py
     mypy src setup.py
     pylint src setup.py
+
+[flake8]
+max-line-length = 88
+extend-ignore = E203
 
 [gh-actions]
 python =
