--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,8 @@ deps =
     pydocstyle ~= 6.1.1
     flake8-docstrings ~= 1.6.0
     pep8-naming ~= 0.11.1
-    mypy >= 0.760, < 0.770
+    mypy >= 0.900, < 0.910
+    types-pkg_resources ~= 0.1.2
     pylint ~= 2.8.3
 commands =
     black --check src setup.py tests docs
