--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
 minversion = 3.13.1
-isolated_build = true
+skipsdist = true
 envlist = gh-pages
 
 [testenv]
 basepython = python3.7
-skip_install = true
 deps = verdoc ~= 1.0.0
 commands = verdoc --build-opt env=docs {posargs}
+
+[testenv:index]
+commands = verdoc-index {posargs}
