Add a publish env to tox

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
     py38
     py39
     static
+    publish
     docs
 
 [testenv]
@@ -23,6 +24,16 @@ deps =
     sphinx-rtd-theme ~= 0.5.2
 commands =
     sphinx-build -b html docs {posargs:docs/_build/html}
+
+[testenv:publish]
+basepython = python3.7
+passenv = TWINE_*
+deps =
+    build ~= 0.4.0
+    twine ~= 3.4.0
+commands =
+    {envpython} -m build --outdir {distdir} .
+    twine {posargs:check} {distdir}/*
 
 [testenv:static]
 basepython = python3.7
@@ -51,7 +62,7 @@ extend-ignore = E203
 
 [gh-actions]
 python =
-    3.7: py37, static, docs
+    3.7: py37, static, publish, docs
     3.8: py38
     3.9: py39
 
