--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,6 +14,7 @@ jobs:
       with:
         python-version: '3.8'
     - run: python -m pip install --upgrade tox
+    - run: sudo apt install graphviz
     - env:
         REFNAME: ${{ github.event.release.tag_name }}
       run: |
