--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -12,4 +12,5 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - run: python -m pip install --upgrade tox-gh-actions
+    - run: sudo apt install graphviz
     - run: tox
